// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag dismissable label should render dismissable label 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="text-lg transition-none border border-solid rounded-[6.25rem] h-6 max-w inline-flex justify-center items-center cursor-default bg-white group align-middle leading-[inherit] text-graphite border-gray"
      data-testid="tag"
      role="button"
      tabindex="0"
    >
      <span
        class="flex gap-2 px-3 overflow-hidden items-center"
      >
        <span
          class="m-0 text-xxs text-inherit font-semibold whitespace-nowrap overflow-ellipsis overflow-hidden leading-[inherit]"
        >
          Tag
        </span>
      </span>
      <span
        aria-label="delete icon"
        class="w-min h-min flex items-center cursor-pointer -ml mr-2"
        role="button"
      >
        <svg
          class="PicassoSvgCloseMinor16 fill-current inline-block font-inherit h-[1em] align-[-.125em]"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="m8.707 8 3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag renders \`blue\` variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="text-lg transition-none border border-solid rounded-[6.25rem] h-6 max-w inline-flex justify-center items-center cursor-default bg-white group align-middle leading-[inherit] text-blue border-blue"
      data-testid="tag"
    >
      <span
        class="flex gap-2 px-3 overflow-hidden items-center"
      >
        <span
          class="m-0 text-xxs text-inherit font-semibold whitespace-nowrap overflow-ellipsis overflow-hidden leading-[inherit]"
        >
          Tag
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag renders \`light-grey\` variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="text-lg transition-none border border-solid rounded-[6.25rem] h-6 max-w inline-flex justify-center items-center cursor-default bg-white group align-middle leading-[inherit] text-graphite border-gray"
      data-testid="tag"
    >
      <span
        class="flex gap-2 px-3 overflow-hidden items-center"
      >
        <span
          class="m-0 text-xxs text-inherit font-semibold whitespace-nowrap overflow-ellipsis overflow-hidden leading-[inherit]"
        >
          Tag
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag renders with adornment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="text-lg transition-none border border-solid rounded-[6.25rem] h-6 max-w inline-flex justify-center items-center cursor-default bg-white group align-middle leading-[inherit] text-graphite border-gray"
      data-testid="tag"
    >
      <span
        class="flex gap-2 px-3 overflow-hidden items-center"
      >
        <span
          class="m-0 text-xxs text-inherit font-semibold whitespace-nowrap overflow-ellipsis overflow-hidden leading-[inherit]"
        >
          foobar
        </span>
        <span
          class="m-0 text-xxs font-regular inline-flex items-center gap-[5px] text-gray group-aria-disabled:text-gray"
        >
          <svg
            class="PicassoSvgLink16 fill-current inline-block font-inherit h-[1em] align-[-.125em]"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="M3 10a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3h5a3 3 0 0 1 3 3h2a3 3 0 0 1 3 3v1a3 3 0 0 1-3 3H8a3 3 0 0 1-3-3H3Zm10-3h-2a3 3 0 0 1-3 3H6a2 2 0 0 0 2 2h5a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2ZM8 4H3a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h2a3 3 0 0 1 3-3h2a2 2 0 0 0-2-2Zm2 3H8a2 2 0 0 0-2 2h2a2 2 0 0 0 2-2Z"
            />
          </svg>
          0
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag renders with connection and icon 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="text-lg transition-none border border-solid rounded-[6.25rem] h-6 max-w inline-flex justify-center items-center cursor-default bg-white group align-middle leading-[inherit] text-graphite border-gray"
      data-testid="tag"
    >
      <svg
        class="PicassoSvgSettings16 fill-current font-inherit h-[1em] align-[-.125em] text-graphite flex items-center -mr ml-3"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M6 2.341V0h4v2.341a5.994 5.994 0 0 1 1.9 1.098l2.028-1.171 2 3.464L13.9 6.903a6.034 6.034 0 0 1 0 2.194l2.028 1.17-2 3.465-2.029-1.171A5.994 5.994 0 0 1 10 13.659V16H6v-2.341a5.994 5.994 0 0 1-1.9-1.098l-2.028 1.171-2-3.464L2.1 9.097a6.034 6.034 0 0 1 0-2.194L.072 5.733l2-3.465L4.1 3.439A5.994 5.994 0 0 1 6 2.341ZM7 1v2.049l-.667.235a4.993 4.993 0 0 0-1.582.915l-.537.46-1.776-1.025-1 1.732L3.212 6.39l-.129.695a5.034 5.034 0 0 0 0 1.83l.129.695-1.774 1.024 1 1.732 1.776-1.025.537.46c.467.4 1.003.71 1.582.915L7 12.95V15h2v-2.049l.667-.235a4.993 4.993 0 0 0 1.582-.915l.537-.46 1.776 1.025 1-1.732-1.774-1.024.129-.695a5.034 5.034 0 0 0 0-1.83l-.129-.695 1.774-1.024-1-1.732-1.776 1.025-.537-.46a4.993 4.993 0 0 0-1.582-.915L9 3.05V1H7Zm1 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Zm0-1a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
        />
      </svg>
      <span
        class="flex gap-2 px-3 overflow-hidden items-center"
      >
        <span
          class="m-0 text-xxs text-inherit font-semibold whitespace-nowrap overflow-ellipsis overflow-hidden leading-[inherit]"
        >
          foobar
        </span>
        <span
          class="m-0 text-xxs font-regular inline-flex items-center gap-[5px] text-gray group-aria-disabled:text-gray"
        >
          <svg
            class="PicassoSvgLink16 fill-current inline-block font-inherit h-[1em] align-[-.125em]"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="M3 10a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3h5a3 3 0 0 1 3 3h2a3 3 0 0 1 3 3v1a3 3 0 0 1-3 3H8a3 3 0 0 1-3-3H3Zm10-3h-2a3 3 0 0 1-3 3H6a2 2 0 0 0 2 2h5a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2ZM8 4H3a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h2a3 3 0 0 1 3-3h2a2 2 0 0 0-2-2Zm2 3H8a2 2 0 0 0-2 2h2a2 2 0 0 0 2-2Z"
            />
          </svg>
          0
        </span>
      </span>
    </div>
  </div>
</div>
`;
